--- a/src/style/base/variables.scss
+++ b/src/style/base/variables.scss
@@ -2,3 +2,7 @@ $main-part-color: #F6D88C;
 $main-text-color: #181817;
 $submain-grey: #6F6F6F;
 $background: #F8F3EC;
+
+$font-grey-text: 22px;
+
+$nav-transition: all 0.3s linear;
