feat: add promo section

--- a/src/style/base/variables.scss
+++ b/src/style/base/variables.scss
@@ -3,6 +3,8 @@ $main-text-color: #181817;
 $submain-grey: #6F6F6F;
 $background: #F8F3EC;
 
-$font-grey-text: 22px;
+$btn-hover: #fec536;
+
+$font-grey-text: 20px;
 
 $nav-transition: all 0.3s linear;
