feat: add marketing section

--- a/src/style/main-style.scss
+++ b/src/style/main-style.scss
@@ -5,6 +5,7 @@
 @import '../style/parts/_header';
 @import '../style/parts/_promo';
 @import '../style/parts/_clients';
+@import '../style/parts/_marketing';
 
 * {
     margin: 0;
