feat: add video and service section

--- a/src/style/main-style.scss
+++ b/src/style/main-style.scss
@@ -6,6 +6,8 @@
 @import '../style/parts/_promo';
 @import '../style/parts/_clients';
 @import '../style/parts/_marketing';
+@import '../style/parts/_video';
+@import '../style/parts/_service';
 
 * {
     margin: 0;
