--- a/src/style/base/re-use-parts.scss
+++ b/src/style/base/re-use-parts.scss
@@ -8,9 +8,15 @@
     text-transform: uppercase;
     font-size: 20px;
     font-weight: 500;
-    transition: $nav-transition;
+    transition: $all-transition;
 }
 
 .btn-box:hover {
     background: $btn-hover;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
