feat: add review and increasing section

--- a/src/style/main-style.scss
+++ b/src/style/main-style.scss
@@ -8,6 +8,10 @@
 @import '../style/parts/_marketing';
 @import '../style/parts/_video';
 @import '../style/parts/_service';
+@import '../style/parts/_service';
+@import '../style/parts/_review';
+@import '../style/parts/_increasing';
+@import '../style/parts/_blog';
 
 * {
     margin: 0;
