--- a/src/style/base/re-use-parts.scss
+++ b/src/style/base/re-use-parts.scss
@@ -20,3 +20,29 @@ img {
     height: auto;
     object-fit: cover;
 }
+
+.title-box {
+    margin: 0 auto 70px;
+    text-align: center;
+    max-width: 513px;
+
+    &__title {
+        margin: 0 0 15px 0;
+        padding: 0;
+
+        h2 {
+            font-size: 58px;
+            line-height: 34px;
+            color: $main-text-color;
+        }
+    }
+
+    &__desc {
+        color: $submain-grey;
+
+        p {
+            font-size: 22px;
+            line-height: 30px;
+        }
+    }
+}
