--- a/src/style/main-style.scss
+++ b/src/style/main-style.scss
@@ -1,6 +1,7 @@
 @import '../assets/fonts/fira-sans.scss';
 @import '../style/base/variables.scss';
 @import '../style/base/re-use-parts.scss';
+@import '../style/base/swiper.scss';
 
 @import '../style/parts/_header';
 @import '../style/parts/_promo';
