feat: add footer

--- a/src/style/main-style.scss
+++ b/src/style/main-style.scss
@@ -13,6 +13,7 @@
 @import '../style/parts/_review';
 @import '../style/parts/_increasing';
 @import '../style/parts/_blog';
+@import '../style/parts/_footer';
 
 * {
     margin: 0;
