--- a/src/style/parts/_blog.scss
+++ b/src/style/parts/_blog.scss
@@ -23,3 +23,20 @@
         }
     }
 }
+
+@media (min-width:320px) and (max-width:576px) {
+    .blog-wrapper {
+        margin: 50px 20px;
+
+        .blog-box {
+            display: block;
+
+            .blog-box-nav {
+
+                &__title {
+                    font-size: 30px;
+                }
+            }
+        }
+    }
+}
