--- a/src/style/parts/_increasing.scss
+++ b/src/style/parts/_increasing.scss
@@ -5,7 +5,6 @@
     background-size: cover;
     background-color: $main-text-color;
     width: 100%;
-    height: 589px;
     z-index: -2;
 
     .increasing-box {
@@ -31,6 +30,28 @@
 
         .btn-box {
             margin: 60px 0;
+        }
+    }
+}
+
+@media (min-width:320px) and (max-width:576px) {
+    .increasing-wrapper {
+
+        .increasing-box {
+
+            &__title {
+                padding: 50px 30px 20px;
+
+                h2 {
+                    font-size: 32px;
+                    line-height: 45px;
+                }
+            }
+
+            &__desc {
+                font-size: 15px;
+                line-height: 20px;
+            }
         }
     }
 }
