--- a/src/style/parts/_service.scss
+++ b/src/style/parts/_service.scss
@@ -54,3 +54,26 @@
         }
     }
 }
+
+@media (min-width:320px) and (max-width:576px) {
+
+    .service {
+
+        .service-wrapper {
+            padding: 20px;
+
+            .service-container {
+                flex-direction: column;
+
+                .service-item {
+                    padding: 0 40px;
+                    text-align: center;
+
+                    &__subtext {
+                        text-align: left;
+                    }
+                }
+            }
+        }
+    }
+}
