--- a/src/style/base/swiper.scss
+++ b/src/style/base/swiper.scss
@@ -17,11 +17,15 @@
 
         .blog-item {
             margin: 50px 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
 
             &__image {
 
                 img {
-                    max-height: 313px;
+                    width: 100%;
+                    height: 313px;
                 }
             }
 
