--- a/src/style/parts/_review.scss
+++ b/src/style/parts/_review.scss
@@ -4,6 +4,8 @@
         margin: 90px 280px 160px;
         display: flex;
         justify-content: space-evenly;
+        align-items: center;
+        gap: 30px;
 
         .review-item {
             max-width: 470px;
@@ -15,7 +17,7 @@
             &__text {
                 margin: 5px 0 30px;
 
-                p {
+                q {
                     font-weight: 600;
                     font-size: 42px;
                     line-height: 47px;
@@ -53,7 +55,7 @@
     }
 }
 
-@media (min-width:320px) and (max-width:576px) {
+@media (min-width:320px) and (max-width:641px) {
 
     .review {
 
@@ -64,7 +66,7 @@
 
                 &__text {
 
-                    p {
+                    q {
                         font-weight: 500;
                         font-size: 24px;
                     }
@@ -78,6 +80,49 @@
             .review-item:nth-child(2) {
                 display: none;
             }
+        }
+    }
+}
+
+@media (min-width:642px) and (max-width:961px) {
+
+    .review {
+
+        .review-wrapper {
+            margin: 60px;
+            align-items: center;
+            flex-direction: column-reverse;
+            gap: 20px;
+
+            .review-item {
+
+                &__rating {
+                    display: none;
+                }
+
+                &__text {
+                    margin: 0;
+
+                    q {
+                        font-size: 27px;
+                        line-height: normal;
+                    }
+                }
+
+                .username {
+                    margin-top: 20px;
+                    justify-content: center;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width:942px) and (max-width:1281px) {
+    .review {
+
+        .review-wrapper {
+            margin: 90px 120px;
         }
     }
 }
