--- a/src/style/parts/_service.scss
+++ b/src/style/parts/_service.scss
@@ -55,7 +55,7 @@
     }
 }
 
-@media (min-width:320px) and (max-width:576px) {
+@media (min-width:320px) and (max-width:641px) {
 
     .service {
 
@@ -64,14 +64,38 @@
 
             .service-container {
                 flex-direction: column;
+                align-items: center;
 
                 .service-item {
                     padding: 0 40px;
                     text-align: center;
+                    align-items: center;
+
+                    &__title {
+                        max-width: 100%;
+                    }
 
                     &__subtext {
                         text-align: left;
                     }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width:642px) and (max-width:1025px) {
+    .service {
+
+        .service-wrapper {
+            padding: 161px 50px 60px;
+
+            .service-container {
+                flex-wrap: wrap;
+
+                .service-item {
+                    max-width: 270px;
+                    padding: 0 20px;
                 }
             }
         }
