--- a/src/style/parts/_header.scss
+++ b/src/style/parts/_header.scss
@@ -83,6 +83,14 @@
         &__item {
             padding: 0;
             margin: 0;
+
+
+            a {
+                margin: 0 0.5rem;
+                color: $main-text-color;
+                transition: $all-transition;
+                text-decoration: none;
+            }
         }
 
         &__item:hover {
